--- a/index.html
+++ b/index.html
@@ -1469,6 +1469,14 @@ window.addStudent = function(){
   });
 })();
 </script>
-
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/ClassTapMark/sw.js')
+      .then(reg => console.log('SW registered'))
+      .catch(err => console.log('SW failed', err));
+  });
+}
+</script>
 </body>
 </html>
