--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
           </div>
 
           <div style="display:flex; gap:0.6rem; flex-wrap:wrap; justify-content:center; width:100%; align-items:center;">
-            <button class="primary" style="flex:1; min-width:120px;" onclick="importCSV()" title="Select a class from the dropdown to enable importing">Import</button>
-			<button class="primary" style="flex:1; min-width:120px;" onclick="addStudent()">Add Student</button>
-			<button id="btnCancelEdit" class="edit" style="flex:1; min-width:120px;" onclick="cancelEdit()" disabled>Cancel Edit</button>
+            <button class="primary" style="flex:1;" onclick="importCSV()" title="Select a class from the dropdown to enable importing">Import</button>
+			<button class="primary" style="flex:1;" onclick="addStudent()">Add</button>
+			<button id="btnCancelEdit" class="edit" style="flex:1;" onclick="cancelEdit()" disabled>Cancel Edit</button>
           </div>
           <div style="display:flex; gap:0.6rem; flex-wrap:wrap; justify-content:center; width:100%; align-items:center;">
             <!-- Per-student export (enabled in edit mode) -->
-            <button class="primary" style="flex:1; min-width:120px;" onclick="exportCSV()" title="Click Edit ✏️ to Export Student"  disabled id="btnExportStudent">Export</button>
+            <button class="primary" style="flex:1;" onclick="exportCSV()" title="Click Edit ✏️ to Export Student"  disabled id="btnExportStudent">Export</button>
           </div>
         </div>
       </div>
